--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 			<div class="row">
 				<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
 					<div id="display"></div>
+						<h1 class="instructionTxt">Please choose a difficulty to play!</h1>
   					<div id="buttons"></div>
 				</div>
 			</div>
